--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,21 @@ h5.card-title {
 }
 
 
+.carousel-caption h5 {
+  color: white;
+  background-color: #4aaaa5;
+  padding: 10px 100px;
+}
+
 #portfolio-carousel {
+  width: 500px;
+  margin:50px auto;
+}
+
+#carouselExampleCaptions {
   width: 500px;
   margin:auto;
 }
+
+
+
